force-app/main/default/objects/Succulent__c/Succulent__c.object-meta.xml
<CustomObject>
    <label>Succulent</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Succulents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>