force-app/main/default/objects/Succulent__c/fields/Cut_Propogation__c.field-meta.xml
<CustomField>
    <fullName>Cut_Propogation__c</fullName>
    <label>Cut Propogation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>