force-app/main/default/objects/Succulent__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sedum</fullName>
            </value>
            <value>
                <fullName>Aloe</fullName>
            </value>
            <value>
                <fullName>Echeveria</fullName>
            </value>
            <value>
                <fullName>Haworthia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>