force-app/main/default/objects/Succulent__c/fields/Flowering__c.field-meta.xml
<CustomField>
    <fullName>Flowering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flowering</label>
    <type>Checkbox</type>
</CustomField>