force-app/main/default/objects/Succulent__c/fields/Growing_Season__c.field-meta.xml
<CustomField>
    <fullName>Growing_Season__c</fullName>
    <label>Growing Season</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>