force-app/main/default/objects/Succulent__c/fields/Grows_During__c.field-meta.xml
<CustomField>
    <fullName>Grows_During__c</fullName>
    <label>Grows During</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>