force-app/main/default/objects/Succulent__c/fields/Leaf_Propogation__c.field-meta.xml
<CustomField>
    <fullName>Leaf_Propogation__c</fullName>
    <label>Leaf Propogation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>