force-app/main/default/objects/Succulent__c/fields/Offset_Propogation__c.field-meta.xml
<CustomField>
    <fullName>Offset_Propogation__c</fullName>
    <label>Offset Propogation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>