force-app/main/default/objects/Succulent__c/fields/Pairs_With__c.field-meta.xml
<CustomField>
    <fullName>Pairs_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pairs With</label>
    <referenceTo>Succulent__c</referenceTo>
    <relationshipLabel>succulents</relationshipLabel>
    <relationshipName>succulents</relationshipName>
    <type>Lookup</type>
</CustomField>