force-app/main/default/objects/Succulent__c/fields/Perfect_Place__c.field-meta.xml
<CustomField>
    <fullName>Perfect_Place__c</fullName>
    <label>Perfect Place</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>