force-app/main/default/objects/Succulent__c/fields/Propogate_By__c.field-meta.xml
<CustomField>
    <fullName>Propogate_By__c</fullName>
    <label>Propogate By</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cuttings</fullName>
            </value>
            <value>
                <fullName>Leaves</fullName>
            </value>
            <value>
                <fullName>Offsets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>