force-app/main/default/objects/Succulent__c/fields/Sun_Light__c.field-meta.xml
<CustomField>
    <fullName>Sun_Light__c</fullName>
    <label>Sun Light</label>
    <length>100</length>
    <type>Text</type>
</CustomField>