force-app/main/default/objects/Succulent__c/fields/Survive_Cold__c.field-meta.xml
<CustomField>
    <fullName>Survive_Cold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survive Cold</label>
    <type>Checkbox</type>
</CustomField>