force-app/main/default/objects/Succulent__c/fields/Toxic__c.field-meta.xml
<CustomField>
    <fullName>Toxic__c</fullName>
    <label>Toxic</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animals</fullName>
                <default>true</default>
                <label>Animals</label>
            </value>
            <value>
                <fullName>Humans</fullName>
            </value>
            <value>
                <fullName>Non Toxic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>