force-app/main/default/objects/Succulent__c/fields/Watering__c.field-meta.xml
<CustomField>
    <fullName>Watering__c</fullName>
    <label>Watering</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>