force-app/main/default/objects/Succulent__c/fields/Where_to_plant__c.field-meta.xml
<CustomField>
    <fullName>Where_to_plant__c</fullName>
    <label>Where to plant</label>
    <type>TextArea</type>
</CustomField>