force-app/main/default/objects/Succulent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Scientific_Name__c</columns>
    <columns>Family__c</columns>
    <columns>Zone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>